# serializer version: 1
# name: test_button[ex30_2024][button.volvo_ex30_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_ex30_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light-outline',
    'original_name': 'Flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash',
    'unique_id': 'yv1abcdefg1234567_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo EX30 Flash',
      'icon': 'mdi:alarm-light-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_ex30_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_honk-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_ex30_honk',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:trumpet',
    'original_name': 'Honk',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk',
    'unique_id': 'yv1abcdefg1234567_honk',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_honk-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo EX30 Honk',
      'icon': 'mdi:trumpet',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_ex30_honk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_honk_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_ex30_honk_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light',
    'original_name': 'Honk & flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk_flash',
    'unique_id': 'yv1abcdefg1234567_honk_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_honk_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo EX30 Honk & flash',
      'icon': 'mdi:alarm-light',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_ex30_honk_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_start_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_ex30_start_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Start climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_start',
    'unique_id': 'yv1abcdefg1234567_climatization_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_start_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo EX30 Start climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_ex30_start_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_stop_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_ex30_stop_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Stop climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_stop',
    'unique_id': 'yv1abcdefg1234567_climatization_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[ex30_2024][button.volvo_ex30_stop_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo EX30 Stop climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_ex30_stop_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_s90_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light-outline',
    'original_name': 'Flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash',
    'unique_id': 'yv1abcdefg1234567_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 Flash',
      'icon': 'mdi:alarm-light-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_s90_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_honk-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_s90_honk',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:trumpet',
    'original_name': 'Honk',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk',
    'unique_id': 'yv1abcdefg1234567_honk',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_honk-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 Honk',
      'icon': 'mdi:trumpet',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_s90_honk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_honk_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_s90_honk_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light',
    'original_name': 'Honk & flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk_flash',
    'unique_id': 'yv1abcdefg1234567_honk_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_honk_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 Honk & flash',
      'icon': 'mdi:alarm-light',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_s90_honk_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_start_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_s90_start_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Start climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_start',
    'unique_id': 'yv1abcdefg1234567_climatization_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_start_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 Start climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_s90_start_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_stop_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_s90_stop_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Stop climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_stop',
    'unique_id': 'yv1abcdefg1234567_climatization_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[s90_diesel_2018][button.volvo_s90_stop_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 Stop climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_s90_stop_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc40_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light-outline',
    'original_name': 'Flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash',
    'unique_id': 'yv1abcdefg1234567_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC40 Flash',
      'icon': 'mdi:alarm-light-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc40_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_honk-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc40_honk',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:trumpet',
    'original_name': 'Honk',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk',
    'unique_id': 'yv1abcdefg1234567_honk',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_honk-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC40 Honk',
      'icon': 'mdi:trumpet',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc40_honk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_honk_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc40_honk_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light',
    'original_name': 'Honk & flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk_flash',
    'unique_id': 'yv1abcdefg1234567_honk_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_honk_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC40 Honk & flash',
      'icon': 'mdi:alarm-light',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc40_honk_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_start_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc40_start_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Start climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_start',
    'unique_id': 'yv1abcdefg1234567_climatization_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_start_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC40 Start climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc40_start_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_stop_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc40_stop_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Stop climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_stop',
    'unique_id': 'yv1abcdefg1234567_climatization_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc40_electric_2024][button.volvo_xc40_stop_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC40 Stop climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc40_stop_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc90_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light-outline',
    'original_name': 'Flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash',
    'unique_id': 'yv1abcdefg1234567_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC90 Flash',
      'icon': 'mdi:alarm-light-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc90_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_honk-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc90_honk',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:trumpet',
    'original_name': 'Honk',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk',
    'unique_id': 'yv1abcdefg1234567_honk',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_honk-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC90 Honk',
      'icon': 'mdi:trumpet',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc90_honk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_honk_flash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc90_honk_flash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm-light',
    'original_name': 'Honk & flash',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'honk_flash',
    'unique_id': 'yv1abcdefg1234567_honk_flash',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_honk_flash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC90 Honk & flash',
      'icon': 'mdi:alarm-light',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc90_honk_flash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_start_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc90_start_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Start climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_start',
    'unique_id': 'yv1abcdefg1234567_climatization_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_start_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC90 Start climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc90_start_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_stop_climatization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.volvo_xc90_stop_climatization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:air-conditioner',
    'original_name': 'Stop climatization',
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'climatization_stop',
    'unique_id': 'yv1abcdefg1234567_climatization_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[xc90_petrol_2019][button.volvo_xc90_stop_climatization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo XC90 Stop climatization',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.volvo_xc90_stop_climatization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
